Melhorias no layout

--- a/public/stylesheets/sb-admin-2.css
+++ b/public/stylesheets/sb-admin-2.css
@@ -4893,7 +4893,8 @@ input[type="button"].btn-block {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  padding: 1.25rem;
+  padding: 0.50rem;
+  padding-top:0.09rem
 }
 
 .card-title {
@@ -11590,19 +11591,19 @@ a:focus {
 }
 
 .bg-login-image {
-  background: url("https://source.unsplash.com/K4mSJ7kc0As/600x800");
+  background: url("../img/logon.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .bg-register-image {
-  background: url("https://source.unsplash.com/Mv9hjnEUHR4/600x800");
+  background: url("../img/register.jpg");
   background-position: center;
   background-size: cover;
 }
 
 .bg-password-image {
-  background: url("https://source.unsplash.com/oWTW-jNGl9I/600x800");
+  background: url("../img/forgot.jpg");
   background-position: center;
   background-size: cover;
 }
