--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,10 +41,10 @@
                   <%}%>
                   <form class="user" action="/login" method="post">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-user" name="username" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter Email Address...">
+                      <input type="email" class="form-control form-control-user" name="username" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Entre com seu endereço de Email...">
                     </div>
                     <div class="form-group">
-                      <input type="password" class="form-control form-control-user" name="password" id="exampleInputPassword" placeholder="Password">
+                      <input type="password" class="form-control form-control-user" name="password" id="exampleInputPassword" placeholder="Senha">
                     </div>
                     <div class="form-group">
                       <!-- <div class="custom-control custom-checkbox small">
@@ -52,8 +52,7 @@
                         <label class="custom-control-label" for="customCheck">Remember Me</label>
                       </div> -->
                     </div>
-                    <input type="submit" class="btn btn-primary btn-user btn-block">
-                      Login
+                    <input type="submit" class="btn btn-primary btn-user btn-block" value="Login">
                     
                     <hr>
                     <!-- <a href="index.html" class="btn btn-google btn-user btn-block">
@@ -65,7 +64,7 @@
                   </form>
                   <hr>
                   <div class="text-center">
-                    <a class="small" href="forgot-password.html">Forgot Password?</a>
+                    <a class="small" href="/forgot">Esqueceu sua senha?</a>
                   </div>
                   <!-- <div class="text-center">
                     <a class="small" href="register.html">Create an Account!</a>
