--- a/views/public.ejs
+++ b/views/public.ejs
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html lang="pt-br">
 	<head>
 		<link rel="icon" href="img/icone.ico" type="image/x-icon" />
@@ -12,6 +7,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="stylesheets/main.css" />
+		<% include shared/callcss-public %>
 		<noscript><link rel="stylesheet" href="stylesheets/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -101,7 +97,7 @@
 										<article>
 											<a  class="image" ><img src="img/lucas.jpg" alt="" class="imagens_integrantes"/></a>
 											<h3 class="major">Lucas Ferrer</h3>
-											<p class="cargo"><b>Função: Inovação, back-end</b></p>
+											<p class="cargo"><b>Função: Inovação, fullstack</b></p>
 										</article>
 										<article>
 											<a  class="image"><img src="img/matheus1.jpg" alt="" class="imagens_integrantes"/></a>
