--- a/views/Shared/header.ejs
+++ b/views/Shared/header.ejs
@@ -33,14 +33,14 @@
       <!-- Nav Item - Pages Collapse Menu -->
       <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-          <i class="fas fa-fw fa-cog"></i>
-          <span>Components</span>
+          <i class="fa fa-fw fa-address-card-o"></i>
+          <span>Cadastros</span>
         </a>
         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
           <div class="bg-white py-2 collapse-inner rounded">
-            <h6 class="collapse-header">Custom Components:</h6>
-            <a class="collapse-item" href="buttons.html">Buttons</a>
-            <a class="collapse-item" href="/cards">Cards</a>
+            <h6 class="collapse-header">Cadastrar:</h6>
+            <a class="collapse-item" href="/register">Novo Usuario</a>
+            <a class="collapse-item" href="/cards">Nova localidade</a>
           </div>
         </div>
       </li>
