--- a/views/login.ejs
+++ b/views/login.ejs
@@ -41,7 +41,7 @@
                   <%}%>
                   <form class="user" action="/login" method="post">
                     <div class="form-group">
-                      <input type="email" class="form-control form-control-user" name="username" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Entre com seu endereço de Email...">
+                      <input type="text" class="form-control form-control-user" name="username" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Entre com seu endereço de Email...">
                     </div>
                     <div class="form-group">
                       <input type="password" class="form-control form-control-user" name="password" id="exampleInputPassword" placeholder="Senha">
