Criação arquivo ejs cadastro

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -71,7 +71,7 @@
                     </select>
                   </div>
                 </div>
-                <a href="/register" class="btn btn-primary btn-user btn-block">
+                <a href="/index" class="btn btn-primary btn-user btn-block">
                   Registrar conta
                 </a>
                 <hr>
