--- a/views/public.ejs
+++ b/views/public.ejs
@@ -7,13 +7,13 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="stylesheets/main.css" />
-		<% include shared/callcss-public %>
+		<% include Shared/callcss-public %>
 		<noscript><link rel="stylesheet" href="stylesheets/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
         
         <!-- Page Wrapper -->
-        <% include shared/header-public %>
+        <% include Shared/header-public %>
 			<div id="page-wrapper" style="top: -60px">
 
 				<!-- Banner -->
