--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 
 <body id="page-top">
 
-  <% include shared/header %>
+  <% include Shared/header %>
 
   <!-- Begin Page Content -->
   <div class="container-fluid">
