--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,12 +29,8 @@
               <div class="text-center">
                 <h1 class="h4 text-gray-900 mb-4">Criar uma nova conta!</h1>
               </div>
-<<<<<<< HEAD
               <!--  -->
-              <form class="user" onsubmit="return(validar());" action="/crud/cadusuario" method="post">
-=======
-              <form class="user" action="/crud/validar" method="POST" onsubmit="return(validacao());">
->>>>>>> ed7bda82559af5c7ce4d022808ae10ba59cb2530
+              <form class="user" onsubmit="return(validacao());" action="/crud/cadusuario" method="post">
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
                     <input type="text" class="form-control form-control-user" id="exampleFirstName"
@@ -59,42 +55,10 @@
                       placeholder="Repetir senha">
 
                   </div>
-                  <script>
-                    function validar() {
-                      alert("teste")
-                      var senha = document.getElementById("exampleInputPassword");
-                      alert(senha.value)
-                      if (senha.value == "") {
-                        // senha.select();
-                        senha.focus();
-                        console.log(senha)
-                        return false
-
-                      }
-                    }
-
-                    function textonly(e) {
-                      var code;
-                      if (!e) var e = window.event;
-                      if (e.keyCode) code = e.keyCode;
-                      else if (e.which) code = e.which;
-                      var character = String.fromCharCode(code);
-                      //alert('Character was ' + character);
-                      //alert(code);
-                      //if (code == 8) return true;
-                      var AllowRegex = /^[\ba-zA-Z\s-]$/;
-                      if (AllowRegex.test(character)) return true;
-                      return false;
-                    }
-                  </script>
+                  
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
-<<<<<<< HEAD
-
-=======
-              
->>>>>>> ed7bda82559af5c7ce4d022808ae10ba59cb2530
                   </div>
                   <div class="col-sm-6">
                     Nivel de acesso:
@@ -122,15 +86,7 @@
   </div>
   
 
-<<<<<<< HEAD
-  <!-- Custom scripts for all pages-->
-  <!-- <script src="javascripts/sb-admin-2.min.js"></script> -->
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
-
-  <!-- <script src="../public/javascripts/teste.js"></script> -->
-=======
  <script src="javascripts/validacao.js"></script>
->>>>>>> ed7bda82559af5c7ce4d022808ae10ba59cb2530
 
 </body>
 
