cadastro de Lojas, atualizarçoes register, link botao nova localidade com cadastro loja

--- a/views/Shared/header.ejs
+++ b/views/Shared/header.ejs
@@ -40,7 +40,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Cadastrar:</h6>
             <a class="collapse-item" href="/register">Novo Usuario</a>
-            <a class="collapse-item" href="/cards">Nova localidade</a>
+            <a class="collapse-item" href="/registerlocal">Nova localidade</a>
           </div>
         </div>
       </li>
