--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,25 +34,25 @@
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
                     <input type="text" class="form-control form-control-user" id="exampleFirstName"
-                      placeholder="Primeiro Nome" name="FirstName" onkeypress="return textonly(event);">
+                      placeholder="Primeiro Nome" name="FirstName" maxlength="10" onkeypress="return textonly(event);">
                   </div>
                   <div class="col-sm-6">
                     <input type="text" class="form-control form-control-user" id="exampleLastName"
-                      placeholder="Ultimo Nome" name="LastName" onkeypress="return textonly(event);">
+                      placeholder="Ultimo Nome" name="LastName" maxlength="10" onkeypress="return textonly(event);">
                   </div>
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control form-control-user" id="exampleInputEmail" r="Endereço de e-mail" name="InputEmail"  placeholder="Email" onkeypress="return validEmail(event);">
+                  <input type="email" class="form-control form-control-user" maxlength="50" id="exampleInputEmail" r="Endereço de e-mail" name="InputEmail"  placeholder="Email" onkeypress="return validEmail(event);">
                     
                 </div>
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
                     <input type="password" class="form-control form-control-user" id="password"
-                      placeholder="Senha" name="InputPassword">
+                      placeholder="Senha" maxlength="16" name="InputPassword">
                   </div>
                   <div class="col-sm-6">
                     <input type="password" class="form-control form-control-user" id="confirmPassword"
-                      placeholder="Repetir senha">
+                      placeholder="Repetir senha" maxlength="16">
 
                   </div>
                   
