ROUTER EDIT LOJA - IN PROGRESS

--- a/views/Shared/header.ejs
+++ b/views/Shared/header.ejs
@@ -55,7 +55,7 @@
           <div class="bg-white py-2 collapse-inner rounded">
             <h6 class="collapse-header">Edição:</h6>
             <a class="collapse-item" href="/crud/usertable">Usuarios</a>
-            <a class="collapse-item" href="utilities-border.html">Lojas</a>
+            <a class="collapse-item" href="/crud/lojatable">Lojas</a>
           </div>
         </div>
       </li>
