Criação dashboard maquinas

--- a/views/Shared/header.ejs
+++ b/views/Shared/header.ejs
@@ -90,7 +90,7 @@
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="/charts">
+        <a class="nav-link" href="/dashboard/chart">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Charts</span></a>
       </li>
