--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -24,7 +24,41 @@
 
           <!-- Page Heading -->
           <h1 class="h3 mb-2 text-gray-800">Charts</h1>
-          <p class="mb-4">Chart.js is a third party plugin that is used to generate the charts in this theme. The charts below have been customized - for further customization options, please visit the <a target="_blank" href="https://www.chartjs.org/docs/latest/">official Chart.js documentation</a>.</p>
+        </div>
+        <div class="row">
+            <div class="col-sm-1 mb-3 mb-sm-0"></div>
+                  <div class="col-sm-4 mb-3 mb-sm-0">
+                      Localidade:
+                      <select class="form-control" name="localidade" id="localidade">
+  
+                          <% for(var i=0; i < localidade.length; i++) { %>
+
+                            <option value="<%= localidade[i].id %>"><%= localidade[i].nome %></option>
+      
+                            <% } %>
+  
+                        <!-- <option value="a">das</option> -->
+  
+                        
+  
+                      </select>
+                    </div>
+                    <div class="col-sm-2 mb-3 mb-sm-0"></div>
+                  <div class="col-sm-4">
+                    Maquina:
+                    <select class="form-control" name="loja" id="loja">
+
+                      
+
+                        <option selected disabled>Selecione a Localidade</option>
+
+                  
+
+                    </select>
+                    <br>
+                  </div>
+                </div>
+              </div>    
 
           <!-- Content Row -->
           <div class="row">
@@ -34,7 +68,7 @@
               <!-- Area Chart -->
               <div class="card shadow mb-4">
                 <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Area Chart</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">Consumo CPU</h6>
                 </div>
                 <div class="card-body">
                   <div class="chart-area">
@@ -66,7 +100,7 @@
               <div class="card shadow mb-4">
                 <!-- Card Header - Dropdown -->
                 <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Donut Chart</h6>
+                  <h6 class="m-0 font-weight-bold text-primary">HD utilizado</h6>
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
@@ -120,6 +154,7 @@
   </div>
 
   <% include Shared/calljs %>
+  <script src="../javascripts/chartMaquina.js"></script>
 
 </body>
 
