--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <title><%= title %></title>
-  
+
   <% include Shared/callcss %>
 
 </head>
@@ -28,41 +28,11 @@
           class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
     </div>
 
-    <div class="row">
-      <!-- Area Chart -->
-      <div class="col-xl-12 col-lg-12">
-          <div class="card shadow mb-4">
-            <!-- Card Header - Dropdown -->
-            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-              <h6 class="m-0 font-weight-bold text-primary">Localidades</h6>
-              <div class="dropdown no-arrow">
-                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                  aria-haspopup="true" aria-expanded="false">
-                  <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                  aria-labelledby="dropdownMenuLink">
-                  <div class="dropdown-header">Dropdown Header:</div>
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-              </div>
-            </div>
-            <!-- Card Body -->
-            <div class="card-body">
-              <div class="chart-area">
-                <div id="google-maps"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-    </div>
-    <!-- Content Row -->
-    <div class="row">
 
-      <!-- Earnings (Monthly) Card Example -->
+    <!-- Content Row -->
+    <!-- <div class="row">
+
+      Earnings (Monthly) Card Example
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-primary shadow h-100 py-2">
           <div class="card-body">
@@ -79,7 +49,7 @@
         </div>
       </div>
 
-      <!-- Earnings (Monthly) Card Example -->
+      Earnings (Monthly) Card Example
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-success shadow h-100 py-2">
           <div class="card-body">
@@ -96,7 +66,7 @@
         </div>
       </div>
 
-      <!-- Earnings (Monthly) Card Example -->
+      Earnings (Monthly) Card Example
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-info shadow h-100 py-2">
           <div class="card-body">
@@ -123,7 +93,7 @@
         </div>
       </div>
 
-      <!-- Pending Requests Card Example -->
+      Pending Requests Card Example
       <div class="col-xl-3 col-md-6 mb-4">
         <div class="card border-left-warning shadow h-100 py-2">
           <div class="card-body">
@@ -139,13 +109,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Content Row -->
 
     <div class="row">
 
-      
+
       <!-- Area Chart -->
       <div class="col-xl-8 col-lg-7">
         <div class="card shadow mb-4">
@@ -217,7 +187,37 @@
         </div>
       </div>
     </div>
-
+    <div class="row">
+      <!-- Area Chart -->
+      <div class="col-xl-12 col-lg-12">
+        <div class="card shadow mb-4">
+          <!-- Card Header - Dropdown -->
+          <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+            <h6 class="m-0 font-weight-bold text-primary">Localidades</h6>
+            <div class="dropdown no-arrow">
+              <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
+              </a>
+              <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
+                aria-labelledby="dropdownMenuLink">
+                <div class="dropdown-header">Dropdown Header:</div>
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+          </div>
+          <!-- Card Body -->
+          <div class="card-body">
+            <div class="chart-area">
+              <div id="google-maps"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- Content Row -->
     <div class="row">
 
