--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -30,7 +30,7 @@
                   <div class="col-sm-4 mb-3 mb-sm-0">
                       Localidade:
                       <select class="form-control" name="localidade" id="localidade">
-  
+                        <option selected disabled>Selecione a Localidade</option>
                           <% for(var i=0; i < localidade.length; i++) { %>
 
                             <option value="<%= localidade[i].id %>"><%= localidade[i].nome %></option>
