rota de edição de loja e localidade terminada

--- a/views/lojatable.ejs
+++ b/views/lojatable.ejs
@@ -62,7 +62,7 @@
                           Estado=<%=tabLojaData.Estado %>&Cidade=<%=tabLojaData.Cidade %>&Cep=<%= tabLojaData.Cep %>
                           &Bairro=<%= tabLojaData.Bairro%>&Endereco=<%= tabLojaData.Endereco%>&
                           Numero=<%= tabLojaData.Numero%>&Complemento=<%= tabLojaData.Complemento%>&Telefone=<%= tabLojaData.Telefone %>">Editar</a></td>
-
+                          <td><a href="/crud/lojadelete/<%= tabLojaData.ID %>">Deletar</a></td>
                       </tr>
                 <% }); %>
               </tbody>
