--- a/views/edituser.ejs
+++ b/views/edituser.ejs
@@ -88,8 +88,12 @@
                 <input type="submit" class="btn btn-primary btn-user btn-block" value="Editar conta">
                 <%= message %>
                 <hr>
-            </div>
+
             </form>
+            <form action="/crud/usertable" method="GET" >
+              <input type="submit" class="btn btn-primary btn-user btn-block" value="Voltar" id="voltar">                
+            </form>
+          </div>
           </div>
         </div>
       </div>
