--- a/views/local.ejs
+++ b/views/local.ejs
@@ -92,8 +92,13 @@
                 <input type="submit" class="btn btn-primary btn-user btn-block" value="Registrar loja">
                 <%= message %>
                 <hr>
+              </form>
+                <form action="/index" method="GET" >
+                  <input type="submit" class="btn btn-primary btn-user btn-block" value="Voltar" id="voltar">                
+                </form>
             </div>
-            </form>
+            
+  
           </div>
         </div>
       </div>
