--- a/views/register.ejs
+++ b/views/register.ejs
@@ -76,8 +76,12 @@
                 <input type="submit" class="btn btn-primary btn-user btn-block" value="Registrar conta">
                 <%= message %>
                 <hr>
+              </form>
+                <form action="/index" method="GET" >
+                  <input type="submit" class="btn btn-primary btn-user btn-block" value="Voltar" id="voltar">                
+                </form>
             </div>
-            </form>
+            
           </div>
         </div>
       </div>
