--- a/public/stylesheets/sb-admin-2.css
+++ b/public/stylesheets/sb-admin-2.css
@@ -11554,6 +11554,13 @@ a:focus {
   content: '\f105';
 }
 
+.canvasGraph{
+
+  width:100% !important;
+  height:40vh !important;
+
+}
+
 .chart-area {
   position: relative;
   height: 10rem;
