--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -64,7 +64,7 @@
           <div class="row">
 
             <div class="col-xl-8 col-lg-7">
-
+              
               <!-- Area Chart -->
               <div class="card shadow mb-4">
                 <div class="card-header py-3">
@@ -72,29 +72,14 @@
                 </div>
                 <div class="card-body">
                   <div class="chart-area">
-                    <canvas id="myAreaChart"></canvas>
+                    <canvas id="myAreaChart" class="canvasGraph"></canvas>
                   </div>
-                  <hr>
-                  Styling for the area chart can be found in the <code>/js/demo/chart-area-demo.js</code> file.
                 </div>
               </div>
 
-              <!-- Bar Chart -->
-              <div class="card shadow mb-4">
-                <div class="card-header py-3">
-                  <h6 class="m-0 font-weight-bold text-primary">Bar Chart</h6>
-                </div>
-                <div class="card-body">
-                  <div class="chart-bar">
-                    <canvas id="myBarChart"></canvas>
-                  </div>
-                  <hr>
-                  Styling for the bar chart can be found in the <code>/js/demo/chart-bar-demo.js</code> file.
-                </div>
-              </div>
-
+              
             </div>
-
+            
             <!-- Donut Chart -->
             <div class="col-xl-4 col-lg-5">
               <div class="card shadow mb-4">
@@ -107,12 +92,26 @@
                   <div class="chart-pie pt-4">
                     <canvas id="myPieChart"></canvas>
                   </div>
-                  <hr>
-                  Styling for the donut chart can be found in the <code>/js/demo/chart-pie-demo.js</code> file.
                 </div>
               </div>
             </div>
           </div>
+            <div class="">
+              
+              <div class="col-xl-12 col-lg-7">
+                  <!-- Bar Chart -->
+                  <div class="card shadow mb-8">
+                    <div class="card-header py-3">
+                      <h6 class="m-0 font-weight-bold text-primary">Bar Chart</h6>
+                    </div>
+                    <div class="card-body">
+                      <div class="chart-bar">
+                        <canvas id="myBarChart" class="canvasGraph"></canvas>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+                </div>
 
         </div>
         <!-- /.container-fluid -->
