Alterações de layout

--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -102,7 +102,7 @@
                   <!-- Bar Chart -->
                   <div class="card shadow mb-8">
                     <div class="card-header py-3">
-                      <h6 class="m-0 font-weight-bold text-primary">Bar Chart</h6>
+                      <h6 class="m-0 font-weight-bold text-primary">Consumo Ram</h6>
                     </div>
                     <div class="card-body">
                       <div class="chart-bar">
