Melhoria de detalhes para gráficos

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -139,7 +139,7 @@
           </div>
           <!-- Card Body -->
           <div class="card-body">
-            <div class="chart-area">
+            <div class="chart-container" style="position: relative; height:45vh; width:100%">
               <canvas id="chartHistoricoStatus" class="canvasGraph"></canvas>
             </div>
           </div>
@@ -169,7 +169,7 @@
           </div>
           <!-- Card Body -->
           <div class="card-body">
-            <div class="chart-pie pt-4 pb-2">
+            <div class="chart-container" style="position: relative; height:40vh; width:100%">
               <canvas id="myPieChart"></canvas>
             </div>
             <div class="mt-4 text-center small">
