--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -71,7 +71,7 @@
                   <h6 class="m-0 font-weight-bold text-primary">Consumo CPU</h6>
                 </div>
                 <div class="card-body">
-                  <div class="chart-area">
+                  <div class="chart-container" style="position: relative; height:44vh; width:100%">
                     <canvas id="myAreaChart" class="canvasGraph"></canvas>
                   </div>
                 </div>
@@ -89,7 +89,7 @@
                 </div>
                 <!-- Card Body -->
                 <div class="card-body">
-                  <div class="chart-pie pt-4">
+                  <div class="chart-container" style="position: relative; height:44vh; width:100%">
                     <canvas id="myPieChart"></canvas>
                   </div>
                 </div>
@@ -105,7 +105,7 @@
                       <h6 class="m-0 font-weight-bold text-primary">Consumo Ram</h6>
                     </div>
                     <div class="card-body">
-                      <div class="chart-bar">
+                      <div class="chart-container" style="position: relative; height:45vh; width:100%">
                         <canvas id="myBarChart" class="canvasGraph"></canvas>
                       </div>
                     </div>
