Alterações de layout

--- a/views/Shared/calljs.ejs
+++ b/views/Shared/calljs.ejs
@@ -17,10 +17,9 @@
   <script src="../vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
   <!-- Page level custom scripts -->
-  <script src="../javascripts/demo/chart-area-demo.js"></script>
-  <script src="../javascripts/demo/chart-pie-demo.js"></script>
+  <!-- <script src="../javascripts/demo/chart-area-demo.js"></script> -->
+  <!-- <script src="../javascripts/demo/chart-pie-demo.js"></script> -->
   <!-- <script src="javascripts/demo/chart-bar-demo.js"></script> -->
-  <script src="../javascripts/demo/datatables-demo.js"></script>
-  <script src="../javascripts/maps.js"></script>
+  <!-- <script src="../javascripts/demo/datatables-demo.js"></script> -->
 
 
