--- a/views/Shared/footer.ejs
+++ b/views/Shared/footer.ejs
@@ -2,7 +2,7 @@
       <footer class="sticky-footer" style="background-image: linear-gradient(to bottom, #121421, #12141d, #12141d, #12131a, #12131a, #12131a, #12131a)">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-
+              &copy; 2019 Get Set Pet
           </div>
         </div>
       </footer>
